# DRF_CW

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  habits.json  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_rename_present_habit_award_alter_habit_action_and_more.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
