[tool.poetry]
name = "drf-cw"
version = "0.1.0"
description = ""
authors = ["Landers1995"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
djangorestframework = "^3.15.2"
rest-framework-simplejwt = "^0.0.2"
django-filter = "^24.3"
django-celery-beat = "^2.7.0"
drf-yasg = "^1.21.8"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
django-cors-headers = "^4.5.0"
eventlet = "^0.37.0"
redis = "^5.1.1"
flake8 = "^7.1.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
